# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Renderer/: CMakeLists.txt
Renderer/include/: Camera.hpp  DirectionalLight.hpp  Mesh.hpp  PhysicsMesh.hpp  Renderer.hpp  ShaderBase.hpp  Texture.hpp  utils.hpp
Renderer/include/Shaders/: PhysicsShader.hpp  ShaderBase.hpp
Renderer/src/: Camera.cpp  DirectionalLight.cpp  Mesh.cpp  PhysicsMesh.cpp  Renderer.cpp  ShaderBase.cpp  Texture.cpp
Renderer/src/Shaders/: PhysicsShader.cpp  ShaderBase.cpp
resources/shaders/: fragment.frag  physics.frag  physics.vert  vertex.vert
scripts/: compile.bat  compile.sh
src/: main.cpp
